fix(blend-border): make spacing consistent

--- a/src/scripts/components/stories/story/blocks/image-gallery/modules/shared/time-and-wavelength-blend-image/time-and-wavelength-blend-image.module.css
+++ b/src/scripts/components/stories/story/blocks/image-gallery/modules/shared/time-and-wavelength-blend-image/time-and-wavelength-blend-image.module.css
@@ -28,7 +28,7 @@
     top: 50%;
     background-color: #3f6c7d;
     color: white;
-    margin-right: 4px;
+    margin-right: 4.5px;
 
     &:nth-of-type(2) {
       margin-right: -2.5px;
